[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Leaderboard.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.5
margin_top = -200.0
margin_right = 120.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LeaderboardTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Leaderboard" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -60.5
margin_bottom = 60.5
grow_vertical = 2
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardTitle" type="Label" parent="Leaderboard"]
margin_right = 480.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Hall of fame"
align = 1

[node name="LeaderboardRow" type="HBoxContainer" parent="Leaderboard"]
margin_top = 82.0
margin_right = 480.0
margin_bottom = 121.0
alignment = 1

[node name="Name" type="Label" parent="Leaderboard/LeaderboardRow"]
margin_right = 333.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "AlphaGo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Leaderboard/LeaderboardRow"]
margin_left = 337.0
margin_right = 480.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
custom_fonts/font = SubResource( 4 )
text = "101"
align = 1
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="LeaderboardTimer" to="." method="_on_LeaderboardTimer_timeout"]
